--- a/config.toml
+++ b/config.toml
@@ -19,7 +19,7 @@ preserveTaxonomyNames = true
 [params.copyright]
     name = " FBRC DONK.WORLD"
     url = "https://www.donk.world"
-    prefix = "Flashback Rave Committee"
+    prefix = "Flashback Rave Committee | PEACE, LOVE, UNITY, RESPECT"
     suffix = "All rights reserved. [> site source](https://github.com/embrcollab/donk.world)"
 
 [menu]
